[package]
name = "refmak"
version = "0.1.0"
authors = ["Fredrik <freddahf@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde_json = "1.0.59" 
structopt = "0.3"
